fixed issues with crop (missing index shift to new origin prevented data download)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ exportMethods(crop)
 exportMethods(readAll)
 exportMethods(sampleRegular)
 exportMethods(setSelection)
+exportMethods(spplot)
 import(methods)
 import(raster)
 import(scidb)
