--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,11 @@
 export(scidbst)
 exportClasses(scidbst)
 exportMethods(crop)
-exportMethods(names)
+exportMethods(getValues)
 exportMethods(readAll)
 exportMethods(sampleRegular)
 exportMethods(slice)
 exportMethods(spplot)
-exportMethods(subset)
 import(methods)
 import(raster)
 import(scidb)
