added an aggregate over time function that relies on scidb functionality (first version)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(scidbst)
 exportClasses(scidbst)
+exportMethods(aggregate.t)
 exportMethods(crop)
 exportMethods(getValues)
 exportMethods(readAll)
