- slice operation modified for temporal slicing with a timestamp representation
- fixed issue regarding build process, where the class scidb was not
found (not exported by package 'scidb')

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ exportMethods(readAll)
 exportMethods(sampleRegular)
 exportMethods(slice)
 exportMethods(spplot)
-import(methods)
 import(raster)
 import(scidb)
+importClassesFrom(methods,POSIXlt)
+importClassesFrom(methods,environment)
