--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(scidbst)
 exportClasses(scidbst)
+exportMethods(aggregate.sp)
 exportMethods(aggregate.t)
 exportMethods(crop)
 exportMethods(getValues)
