update on aggregation over time / space and in general for scidbst objects
ISSUE: using aggregate after creating a scidb object from an inheriting
class does not use "aggregate" AFL command, but "window(filter(" ...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(scidbst)
 exportClasses(scidbst)
+exportMethods(aggregate)
 exportMethods(aggregate.sp)
 exportMethods(aggregate.t)
 exportMethods(crop)
