--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,4 +8,9 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 LazyData: TRUE
 RoxygenNote: 5.0.1
-Depends: raster,scidb,rgdal
+Depends:
+    raster,scidb,rgdal
+Collate:
+    'scidbst-class.R'
+    'aggregate.R'
+    'pkg.R'
