fixed issues with aggregate function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,9 @@ exportMethods(crop)
 exportMethods(getValues)
 exportMethods(readAll)
 exportMethods(sampleRegular)
+exportMethods(show)
 exportMethods(slice)
 exportMethods(spplot)
+import(methods)
 import(raster)
 import(scidb)
-importClassesFrom(methods,POSIXlt)
-importClassesFrom(methods,environment)
