materialize uses now the correct dimension names
nrow and ncol have problems with images having no spatial or temporal
reference, e.g. if aggregated over space and time.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,10 @@ exportMethods(aggregate)
 exportMethods(aggregate.sp)
 exportMethods(aggregate.t)
 exportMethods(crop)
+exportMethods(getTDim)
 exportMethods(getValues)
+exportMethods(getXDim)
+exportMethods(getYDim)
 exportMethods(readAll)
 exportMethods(sampleRegular)
 exportMethods(show)
