- added basic functionalities for delegation and reference setting - made scidbeval generic and applicable for scidbst objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ exportMethods(getXDim)
 exportMethods(getYDim)
 exportMethods(readAll)
 exportMethods(sampleRegular)
+exportMethods(scidbeval)
 exportMethods(show)
 exportMethods(slice)
 exportMethods(spplot)
