--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,7 @@ Depends:
 Collate:
     'scidbst-class.R'
     'aggregate.R'
+    'crop.R'
     'pkg.R'
-    'scidbeval.R'
+    'scidbsteval.R'
+    'slice.R'
