--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ exportMethods(getXDim)
 exportMethods(getYDim)
 exportMethods(readAll)
 exportMethods(sampleRegular)
-exportMethods(scidbeval)
+exportMethods(scidbsteval)
 exportMethods(show)
 exportMethods(slice)
 exportMethods(spplot)
