- implemented 'regrid' functionality - also enabled raster::resample method for spatially referenced arrays - test with regrid OK - test with resample OK

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ exportMethods(getValues)
 exportMethods(getXDim)
 exportMethods(getYDim)
 exportMethods(readAll)
+exportMethods(regrid)
+exportMethods(resample)
 exportMethods(sampleRegular)
 exportMethods(scidbsteval)
 exportMethods(show)
