- documentation changes for readAll, spplot, sampleRegular and getValues - code care. Moved some functions into separate files from scidbst-class

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,11 @@ Collate:
     'scidbst-class.R'
     'aggregate.R'
     'crop.R'
+    'getValues.R'
     'pkg.R'
+    'readAll.R'
     'regrid.R'
+    'sampleRegular.R'
     'scidbsteval.R'
     'slice.R'
+    'spplot.R'
