- more code breakups - more documentaion

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,10 @@ Collate:
     'aggregate.R'
     'crop.R'
     'getValues.R'
+    'getterSetter.R'
+    'names.R'
+    'ncol.R'
+    'nrow.R'
     'pkg.R'
     'readAll.R'
     'regrid.R'
@@ -22,3 +26,4 @@ Collate:
     'scidbsteval.R'
     'slice.R'
     'spplot.R'
+    'utils.R'
