--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,9 @@ exportMethods(getTDim)
 exportMethods(getValues)
 exportMethods(getXDim)
 exportMethods(getYDim)
+exportMethods(names)
+exportMethods(ncol)
+exportMethods(nrow)
 exportMethods(readAll)
 exportMethods(regrid)
 exportMethods(resample)
