--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ exportMethods(aggregate)
 exportMethods(aggregate.sp)
 exportMethods(aggregate.t)
 exportMethods(crop)
+exportMethods(cumulate)
 exportMethods(getLayer)
 exportMethods(getTDim)
 exportMethods(getValues)
