- progress on the subarray wrap

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ exportMethods(aggregate)
 exportMethods(aggregate.sp)
 exportMethods(aggregate.t)
 exportMethods(crop)
-exportMethods(cumulate)
+exportMethods(cumulate.scidbst)
 exportMethods(getLayer)
 exportMethods(getTDim)
 exportMethods(getValues)
@@ -21,7 +21,6 @@ exportMethods(regrid)
 exportMethods(resample)
 exportMethods(sampleRegular)
 exportMethods(scidbsteval)
-exportMethods(show)
 exportMethods(slice)
 exportMethods(spplot)
 exportMethods(transform)
