- extended documentation on crop, subarray, cumulate - made subarray and cumulate generic (scidb functions need to be addressed with package name) - removed restriction in crop that array needs to have only the two spatial dimensions and implemented that behavior - removed bugs in subarray, where the extent was set wrong (ymax and ymin were switched)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ exportMethods(aggregate)
 exportMethods(aggregate.sp)
 exportMethods(aggregate.t)
 exportMethods(crop)
-exportMethods(cumulate.scidbst)
+exportMethods(cumulate)
 exportMethods(getLayer)
 exportMethods(getTDim)
 exportMethods(getValues)
@@ -23,6 +23,7 @@ exportMethods(sampleRegular)
 exportMethods(scidbsteval)
 exportMethods(slice)
 exportMethods(spplot)
+exportMethods(subarray)
 exportMethods(transform)
 import(methods)
 import(raster)
