--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: scidbst
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Title: Spatio Temporal Extension for SciDB (scidbst)
+Version: 0.2.0
+Author: Florian Lahn
+Maintainer: Florian Lahn <florian.lahn@uni-muenster.de>
+Description: This package extends the package scidb for spatial and temporal referenced dimensions. A set of functions were modified in order to maintain the correct references, when applying the functions in scidb.
+License: MIT
 LazyData: TRUE
 RoxygenNote: 5.0.1
 Depends:
