--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(transform,scidbst)
 export(scidbst)
+export(scidbst.ls)
 exportClasses(scidbst)
 exportMethods(aggregate)
 exportMethods(aggregate.sp)
@@ -24,6 +25,7 @@ exportMethods(scidbsteval)
 exportMethods(slice)
 exportMethods(spplot)
 exportMethods(subarray)
+exportMethods(t.extent)
 exportMethods(transform)
 import(methods)
 import(raster)
