- update on the vignette (not build, yet) - wrapped functions for "subset" and "project" - bug fix for "getLayer"

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ Collate:
     'ncol.R'
     'nrow.R'
     'pkg.R'
+    'project.R'
     'readAll.R'
     'regrid.R'
     'sampleRegular.R'
@@ -33,6 +34,7 @@ Collate:
     'slice.R'
     'spplot.R'
     'subarray.R'
+    'subset.R'
     'textent.R'
     'transform-apply.R'
     'utils.R'
