--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,3 +33,6 @@ exportMethods(transform)
 import(methods)
 import(raster)
 import(scidb)
+import(spacetime)
+importClassesFrom(sp,SpatialPointsDataFrame)
+importClassesFrom(spacetime,STSDF)
