coerce update - scidbst -> rasterbrick - STSDF still not completed
vignette update
- cloud coverage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,5 +34,6 @@ import(methods)
 import(raster)
 import(scidb)
 import(spacetime)
+importClassesFrom(raster,RasterBrick)
 importClassesFrom(sp,SpatialPointsDataFrame)
 importClassesFrom(spacetime,STSDF)
