--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ exportMethods(aggregate.sp)
 exportMethods(aggregate.t)
 exportMethods(crop)
 exportMethods(cumulate)
+exportMethods(extent)
 exportMethods(getLayer)
 exportMethods(getTDim)
 exportMethods(getValues)
@@ -21,6 +22,7 @@ exportMethods(nrow)
 exportMethods(project)
 exportMethods(readAll)
 exportMethods(regrid)
+exportMethods(res)
 exportMethods(resample)
 exportMethods(sampleRegular)
 exportMethods(scidbsteval)
@@ -30,6 +32,8 @@ exportMethods(subarray)
 exportMethods(subset)
 exportMethods(t.extent)
 exportMethods(transform)
+exportMethods(xres)
+exportMethods(yres)
 import(methods)
 import(raster)
 import(scidb)
@@ -37,3 +41,4 @@ import(spacetime)
 importClassesFrom(raster,RasterBrick)
 importClassesFrom(sp,SpatialPointsDataFrame)
 importClassesFrom(spacetime,STSDF)
+importFrom(xts,xts)
