coerce update: - STSDF objects from spacetime are now supported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(subset,scidbst)
 S3method(transform,scidbst)
 export(scidbst)
 export(scidbst.ls)
+export(transformAllSpatialIndices)
+export(transformAllTemporalIndices)
 exportClasses(scidbst)
 exportMethods(aggregate)
 exportMethods(aggregate.sp)
@@ -40,5 +42,4 @@ import(scidb)
 import(spacetime)
 importClassesFrom(raster,RasterBrick)
 importClassesFrom(sp,SpatialPointsDataFrame)
-importClassesFrom(spacetime,STSDF)
 importFrom(xts,xts)
