--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ S3method(subset,scidbst)
 S3method(transform,scidbst)
 export(scidbst)
 export(scidbst.ls)
+export(textent)
 export(transformAllSpatialIndices)
 export(transformAllTemporalIndices)
+exportClasses(TemporalExtent)
 exportClasses(scidbst)
 exportMethods(aggregate)
 exportMethods(aggregate.sp)
@@ -28,11 +30,14 @@ exportMethods(res)
 exportMethods(resample)
 exportMethods(sampleRegular)
 exportMethods(scidbsteval)
+exportMethods(show)
 exportMethods(slice)
 exportMethods(spplot)
 exportMethods(subarray)
 exportMethods(subset)
 exportMethods(t.extent)
+exportMethods(tmax)
+exportMethods(tmin)
 exportMethods(transform)
 exportMethods(xres)
 exportMethods(yres)
