--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(scidbst.ls)
 export(textent)
 export(transformAllSpatialIndices)
 export(transformAllTemporalIndices)
+exportClasses(TRS)
 exportClasses(TemporalExtent)
 exportClasses(scidbst)
 exportMethods(aggregate)
@@ -36,15 +37,19 @@ exportMethods(spplot)
 exportMethods(subarray)
 exportMethods(subset)
 exportMethods(t.extent)
+exportMethods(t0)
+exportMethods(tdim)
 exportMethods(tmax)
 exportMethods(tmin)
 exportMethods(transform)
+exportMethods(tres)
+exportMethods(tunit)
 exportMethods(xres)
 exportMethods(yres)
 import(methods)
 import(raster)
 import(scidb)
-import(spacetime)
 importClassesFrom(raster,RasterBrick)
 importClassesFrom(sp,SpatialPointsDataFrame)
+importClassesFrom(spacetime,STSDF)
 importFrom(xts,xts)
