Vignette Encoding Issue - set encoding in vignette and DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,14 @@ License: MIT
 LazyData: TRUE
 RoxygenNote: 5.0.1
 VignetteBuilder: knitr
+Encoding: UTF-8
+BuildVignette: FALSE
 Depends:
     raster,scidb,rgdal
+Imports:
+    spacetime,xts
 Suggests:
-    knitr,spacetime,xts
+    knitr
 Collate:
     'TemporalExtent-class.R'
     'scidbst-class.R'
