--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,14 @@
 
 S3method(subset,scidbst)
 S3method(transform,scidbst)
+export(SRS)
+export(TRS)
 export(scidbst)
 export(scidbst.ls)
 export(textent)
 export(transformAllSpatialIndices)
 export(transformAllTemporalIndices)
+exportClasses(SRS)
 exportClasses(TRS)
 exportClasses(TemporalExtent)
 exportClasses(scidbst)
@@ -14,13 +17,11 @@ exportMethods(aggregate)
 exportMethods(aggregate.sp)
 exportMethods(aggregate.t)
 exportMethods(crop)
+exportMethods(crs)
 exportMethods(cumulate)
 exportMethods(extent)
 exportMethods(getLayer)
-exportMethods(getTDim)
 exportMethods(getValues)
-exportMethods(getXDim)
-exportMethods(getYDim)
 exportMethods(names)
 exportMethods(ncol)
 exportMethods(nrow)
@@ -44,12 +45,15 @@ exportMethods(tmin)
 exportMethods(transform)
 exportMethods(tres)
 exportMethods(tunit)
+exportMethods(xdim)
 exportMethods(xres)
+exportMethods(ydim)
 exportMethods(yres)
 import(methods)
 import(raster)
 import(scidb)
 importClassesFrom(raster,RasterBrick)
+importClassesFrom(sp,CRS)
 importClassesFrom(sp,SpatialPointsDataFrame)
 importClassesFrom(spacetime,STSDF)
 importFrom(xts,xts)
