Wrapping scidb instead of inheritance - replaced inheritance with aggregated object (slot proxy)
testing:
done: constructor, subarray, crop, slice, xres, yres, regrid,
scidbsteval, transform

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,6 +43,7 @@ Collate:
     'readAll.R'
     'regrid.R'
     'sampleRegular.R'
+    'scidb-basic.R'
     'scidbsteval.R'
     'slice.R'
     'spplot.R'
