--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ exportMethods(aggregate.t)
 exportMethods(crop)
 exportMethods(crs)
 exportMethods(cumulate)
+exportMethods(dimensions)
 exportMethods(extent)
 exportMethods(getLayer)
 exportMethods(getValues)
@@ -31,6 +32,12 @@ exportMethods(regrid)
 exportMethods(res)
 exportMethods(resample)
 exportMethods(sampleRegular)
+exportMethods(scidb_attributes)
+exportMethods(scidb_coordinate_bounds)
+exportMethods(scidb_coordinate_chunksize)
+exportMethods(scidb_coordinate_end)
+exportMethods(scidb_coordinate_overlap)
+exportMethods(scidb_coordinate_start)
 exportMethods(scidbsteval)
 exportMethods(show)
 exportMethods(slice)
