changes in the basic scidb operators

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(subset,scidbst)
 S3method(transform,scidbst)
 export(SRS)
 export(TRS)
+export(clear)
 export(scidbst)
 export(scidbst.ls)
 export(textent)
@@ -64,3 +65,4 @@ importClassesFrom(sp,CRS)
 importClassesFrom(sp,SpatialPointsDataFrame)
 importClassesFrom(spacetime,STSDF)
 importFrom(xts,xts)
+importMethodsFrom(sp,dimensions)
