removed raster inheritance
added functions:
- x/y/min/max (xmin...)

removed/excluded functions:
- getLayer
- getValues
- readAll
- sampleRegular

removed function uses:
- hasValues

added slot 'extent' to scidbst class for the spatial references
added slot 'title' to scidbst class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ S3method(subset,scidbst)
 S3method(transform,scidbst)
 export(SRS)
 export(TRS)
-export(clear)
 export(scidbst)
 export(scidbst.ls)
 export(textent)
@@ -14,6 +13,7 @@ exportClasses(SRS)
 exportClasses(TRS)
 exportClasses(TemporalExtent)
 exportClasses(scidbst)
+exportMethods(affine)
 exportMethods(aggregate)
 exportMethods(aggregate.sp)
 exportMethods(aggregate.t)
@@ -22,17 +22,13 @@ exportMethods(crs)
 exportMethods(cumulate)
 exportMethods(dimensions)
 exportMethods(extent)
-exportMethods(getLayer)
-exportMethods(getValues)
 exportMethods(names)
 exportMethods(ncol)
 exportMethods(nrow)
 exportMethods(project)
-exportMethods(readAll)
 exportMethods(regrid)
 exportMethods(res)
 exportMethods(resample)
-exportMethods(sampleRegular)
 exportMethods(scidb_attributes)
 exportMethods(scidb_coordinate_bounds)
 exportMethods(scidb_coordinate_chunksize)
@@ -54,15 +50,23 @@ exportMethods(transform)
 exportMethods(tres)
 exportMethods(tunit)
 exportMethods(xdim)
+exportMethods(xmax)
+exportMethods(xmin)
 exportMethods(xres)
 exportMethods(ydim)
+exportMethods(ymax)
+exportMethods(ymin)
 exportMethods(yres)
 import(methods)
 import(raster)
 import(scidb)
+importClassesFrom(raster,Extent)
 importClassesFrom(raster,RasterBrick)
 importClassesFrom(sp,CRS)
 importClassesFrom(sp,SpatialPointsDataFrame)
 importClassesFrom(spacetime,STSDF)
+importFrom(raster,res)
+importFrom(raster,xres)
+importFrom(raster,yres)
+importFrom(sp,dimensions)
 importFrom(xts,xts)
-importMethodsFrom(sp,dimensions)
