Functionality: - implemented show method for TRS - now exporting getRefPeriod - update in show(scidbst) for TRS
Removed unused files:
- getValues.R
- sampleRegular.R
- getterSetter.R

Documentation for some functions related with the TRS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(subset,scidbst)
 S3method(transform,scidbst)
 export(SRS)
 export(TRS)
+export(getRefPeriod)
 export(scidbst)
 export(scidbst.ls)
 export(textent)
@@ -48,6 +49,7 @@ exportMethods(tmax)
 exportMethods(tmin)
 exportMethods(transform)
 exportMethods(tres)
+exportMethods(trs)
 exportMethods(tunit)
 exportMethods(xdim)
 exportMethods(xmax)
