functions: - added scidb_op function to get the current AFL query command
fix:
- fixed an issue where the current extents of the array were not
changed, when using 'subarray' with between=TRUE

other:
- updated vignette and its R code for the missing or changed methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(transform,scidbst)
 export(SRS)
 export(TRS)
 export(getRefPeriod)
+export(scidb_op)
 export(scidbst)
 export(scidbst.ls)
 export(textent)
