modifications: - prototyping scidbst class - allowing NULL values for scidbst class slots srs,trs,textent,extent - problem fix with nrow and ncol, when coordinate bounds are bigger than the actual image

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ VignetteBuilder: knitr
 Encoding: UTF-8
 BuildVignette: FALSE
 Depends:
-    raster,scidb
+    scidb,raster
 Imports:
     spacetime,xts,rgdal
 Suggests:
