--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,11 @@ importClassesFrom(raster,RasterBrick)
 importClassesFrom(sp,CRS)
 importClassesFrom(sp,SpatialPointsDataFrame)
 importClassesFrom(spacetime,STSDF)
+importFrom(raster,alignExtent)
+importFrom(raster,as.vector)
+importFrom(raster,extent)
+importFrom(raster,intersect)
+importFrom(raster,raster)
 importFrom(raster,res)
 importFrom(raster,xres)
 importFrom(raster,yres)
