fixed cyclic namespace error on build: - it was caused by getRefPeriod which was "generic", but not properly defined as S4 method
functions:
- setSRS
- setTRS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ S3method(subset,scidbst)
 S3method(transform,scidbst)
 export(SRS)
 export(TRS)
-export(getRefPeriod)
 export(scidb_op)
 export(scidbst)
 export(scidbst.ls)
@@ -24,6 +23,7 @@ exportMethods(crs)
 exportMethods(cumulate)
 exportMethods(dimensions)
 exportMethods(extent)
+exportMethods(getRefPeriod)
 exportMethods(names)
 exportMethods(ncol)
 exportMethods(nrow)
@@ -38,6 +38,8 @@ exportMethods(scidb_coordinate_end)
 exportMethods(scidb_coordinate_overlap)
 exportMethods(scidb_coordinate_start)
 exportMethods(scidbsteval)
+exportMethods(setSRS)
+exportMethods(setTRS)
 exportMethods(show)
 exportMethods(slice)
 exportMethods(spplot)
