--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ exportMethods(setTRS)
 exportMethods(show)
 exportMethods(slice)
 exportMethods(spplot)
+exportMethods(srs)
 exportMethods(subarray)
 exportMethods(subset)
 exportMethods(t.extent)
