added transfer method that uses the eo_over function
changed ncol/nrow use in regrid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ exportMethods(t0)
 exportMethods(tdim)
 exportMethods(tmax)
 exportMethods(tmin)
+exportMethods(transfer)
 exportMethods(transform)
 exportMethods(tres)
 exportMethods(trs)
