function: - first version of spatial "join"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ exportMethods(cumulate)
 exportMethods(dimensions)
 exportMethods(extent)
 exportMethods(getRefPeriod)
+exportMethods(join)
 exportMethods(names)
 exportMethods(ncol)
 exportMethods(nrow)
