- added auto cropping in .equalizeSpatial - exported functions tindex, datetime to calculate time indices from dates and vice versa

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,9 @@ exportMethods(aggregate.t)
 exportMethods(crop)
 exportMethods(crs)
 exportMethods(cumulate)
+exportMethods(datetime)
 exportMethods(dimensions)
+exportMethods(estimateFileSize)
 exportMethods(extent)
 exportMethods(getRefPeriod)
 exportMethods(join)
@@ -50,6 +52,7 @@ exportMethods(subset)
 exportMethods(t.extent)
 exportMethods(t0)
 exportMethods(tdim)
+exportMethods(tindex)
 exportMethods(tmax)
 exportMethods(tmin)
 exportMethods(transfer)
