[xgrid testing and bugfixing]
- tested and fixed bugs with xgrid
- solved issue with misaligned raster pixels (1/2 pixel difference)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ exportMethods(tres)
 exportMethods(trs)
 exportMethods(tunit)
 exportMethods(xdim)
+exportMethods(xgrid)
 exportMethods(xmax)
 exportMethods(xmin)
 exportMethods(xres)
