[changes in apply] - installing required packages if not available - enhanced logging - renaming attributes at the end of the r_exec call

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ exportMethods(affine)
 exportMethods(aggregate)
 exportMethods(aggregate.sp)
 exportMethods(aggregate.t)
+exportMethods(apply.fun)
 exportMethods(crop)
 exportMethods(crs)
 exportMethods(cumulate)
@@ -30,6 +31,7 @@ exportMethods(ncol)
 exportMethods(nrow)
 exportMethods(project)
 exportMethods(regrid)
+exportMethods(repart)
 exportMethods(res)
 exportMethods(resample)
 exportMethods(scidb_attributes)
