--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,7 @@ Collate:
     'TemporalExtent-class.R'
     'scidbst-class.R'
     'aggregate.R'
+    'apply.R'
     'utils.R'
     'coerce.R'
     'crop.R'
