[dev-r_exec] - imported temporary array handling from dev-join branch - implemented redimensioning in apply.fun - implemented some checks and automatic parameter derivation for redimension

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ exportMethods(crop)
 exportMethods(crs)
 exportMethods(cumulate)
 exportMethods(dimensions)
+exportMethods(estimateFileSize)
 exportMethods(extent)
 exportMethods(getRefPeriod)
 exportMethods(join)
