- extracted function to create the ddply command to reuse in the stream interface - removed "\n" characters from the scripts, because they were not recognized in a command line call

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ exportMethods(show)
 exportMethods(slice)
 exportMethods(spplot)
 exportMethods(srs)
+exportMethods(stream)
 exportMethods(subarray)
 exportMethods(subset)
 exportMethods(t.extent)
