[documentation] - fixing an issue where r_exec cannot handle ; as a line delimiter - created a vignette for the r_exec interface - documented functions r.apply and stream

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,6 @@ exportMethods(affine)
 exportMethods(aggregate)
 exportMethods(aggregate.sp)
 exportMethods(aggregate.t)
-exportMethods(apply.fun)
 exportMethods(crop)
 exportMethods(crs)
 exportMethods(cumulate)
@@ -31,6 +30,7 @@ exportMethods(names)
 exportMethods(ncol)
 exportMethods(nrow)
 exportMethods(project)
+exportMethods(r.apply)
 exportMethods(regrid)
 exportMethods(repart)
 exportMethods(res)
