- added copySRS function, which copies the spatial reference of a source array y to the target array x. x is either a scidb or a scidbst object - fixed build error in aggregate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ exportMethods(affine)
 exportMethods(aggregate)
 exportMethods(aggregate.sp)
 exportMethods(aggregate.t)
+exportMethods(copySRS)
 exportMethods(crop)
 exportMethods(crs)
 exportMethods(cumulate)
