- vignette for slope and aspect calculation using r_exec and scidbst - added some functions for convenience: 	- copySRS and copyTRS 	- wrapped schema for scidb and scidbst objects 	- introduced is.spatial and is.temporal as functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ exportMethods(aggregate)
 exportMethods(aggregate.sp)
 exportMethods(aggregate.t)
 exportMethods(copySRS)
+exportMethods(copyTRS)
 exportMethods(crop)
 exportMethods(crs)
 exportMethods(cumulate)
@@ -26,6 +27,8 @@ exportMethods(dimensions)
 exportMethods(estimateFileSize)
 exportMethods(extent)
 exportMethods(getRefPeriod)
+exportMethods(is.spatial)
+exportMethods(is.temporal)
 exportMethods(join)
 exportMethods(names)
 exportMethods(ncol)
@@ -36,6 +39,7 @@ exportMethods(regrid)
 exportMethods(repart)
 exportMethods(res)
 exportMethods(resample)
+exportMethods(schema)
 exportMethods(scidb_attributes)
 exportMethods(scidb_coordinate_bounds)
 exportMethods(scidb_coordinate_chunksize)
