[vignette for trmm_r_exec] - made adaptions to the vignette and removed no longer needed parts
[assign methods]
- started to implement some setter methods using "<-" operator
- supported methods: affine,crs,extent

[documentation]
- added some missing function documentation and modified other

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,9 @@ exportClasses(SRS)
 exportClasses(TRS)
 exportClasses(TemporalExtent)
 exportClasses(scidbst)
+exportMethods("affine<-")
+exportMethods("crs<-")
+exportMethods("extent<-")
 exportMethods(affine)
 exportMethods(aggregate)
 exportMethods(aggregate.sp)
