--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,13 +29,16 @@ Collate:
     'SRS-class.R'
     'TRS-class.R'
     'TemporalExtent-class.R'
+    'affine.R'
     'scidbst-class.R'
     'aggregate.R'
     'apply.R'
     'utils.R'
     'coerce.R'
     'crop.R'
+    'crs.R'
     'cumulate.R'
+    'dimension.R'
     'extent.R'
     'join.R'
     'names.R'
@@ -43,6 +46,7 @@ Collate:
     'project.R'
     'regrid.R'
     'repart.R'
+    'resolution.R'
     'scidb-basic.R'
     'scidbsteval.R'
     'slice.R'
