--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ exportMethods(cumulate)
 exportMethods(dimensions)
 exportMethods(estimateFileSize)
 exportMethods(extent)
+exportMethods(filter)
 exportMethods(getRefPeriod)
 exportMethods(is.spatial)
 exportMethods(is.temporal)
@@ -82,6 +83,8 @@ importClassesFrom(raster,RasterBrick)
 importClassesFrom(sp,CRS)
 importClassesFrom(sp,SpatialPointsDataFrame)
 importClassesFrom(spacetime,STSDF)
+importFrom(raster,"crs<-")
+importFrom(raster,"extent<-")
 importFrom(raster,alignExtent)
 importFrom(raster,extent)
 importFrom(raster,intersect)
