[documentation] - update on documentation
[code reorganization]
- renamed t.extent into textent and joined their former documentations
- affine, crs, dimension, resolution have been decoupled from their
former file SRS-class.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ export(TRS)
 export(scidb_op)
 export(scidbst)
 export(scidbst.ls)
-export(textent)
 export(transformAllSpatialIndices)
 export(transformAllTemporalIndices)
 exportClasses(SRS)
@@ -57,12 +56,11 @@ exportMethods(show)
 exportMethods(slice)
 exportMethods(spplot)
 exportMethods(srs)
-exportMethods(stream)
 exportMethods(subarray)
 exportMethods(subset)
-exportMethods(t.extent)
 exportMethods(t0)
 exportMethods(tdim)
+exportMethods(textent)
 exportMethods(tmax)
 exportMethods(tmin)
 exportMethods(transfer)
